@@ -1,5 +1,10 @@
 2012-07-13  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* dwarf2loc.c (disassemble_dwarf_expression): Handle
+	DW_OP_GNU_parameter_ref.
+
+2012-07-13  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* dwarf2read.c (read_call_site_scope): Do not gdb_assert for invalid
 	read-in CALL_SITE_PARAMETER_PARAM_OFFSET.
 
